src/style.scss
@import './normalize.css';
@font-face {
  font-family: 'GR';
  font-weight: bold;
  font-style: normal;
  src: url('./fonts/GR-Bold.woff') format('woff');
}

@font-face {
  font-family: 'GR';
  font-weight: bold;
  font-style: italic;
  src: url('./fonts/GR-BoldItalic.woff') format('woff');
}

@font-face {
  font-family: 'GR';
  font-weight: 100;
  font-style: normal;
  src: url('./fonts/GR-Book.woff') format('woff');
}

@font-face {
  font-family: 'GR';
  font-weight: 100;
  font-style: italic;
  src: url('./fonts/GR-BookItalic.woff') format('woff');
}

@font-face {
  font-family: 'GR';
  font-weight: normal;
  font-style: normal;
  src: url('./fonts/GR-Medium.woff') format('woff');
}

@font-face {
  font-family: 'GR';
  font-weight: normal;
  font-style: italic;
  src: url('./fonts/GR-MediumItalic.woff') format('woff');
}

$font-stack: 'GR',
Helvetica,
sans-serif;
$br-small: 640px;
$br-medium: 900px;
$br-large: 1500px;
$black: #222;
$blue: #C1C8FF;
$body-border: 20px;
@mixin prefix($property,
$val) {
  -webkit-#{$property}: $val;
  -moz-#{$property}: $val;
  -ms-#{$property}: $val;
  #{$property}: $val;
}

body {
  box-sizing: border-box;
  height: 100vh;
  border: $body-border lighten($blue, 7%) solid;
  border-bottom: none;
  font: 17px/1.3 $font-stack;
  transition: border 0.5s ease;
  @media (max-width: $br-small) {
    font-size: .9rem;
    border: none;
  }
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
  color: $black;
}

h1 {
  font-size: 2.7em;
  font-weight: normal;
  line-height: 1.02;
}

h2 {
  font-size: 1.6em;
  font-weight: 100;
  &:before {
    display: block;
    content: " ";
    margin-top: -150px;
    height: 150px;
    visibility: hidden;
  }
}

h3 {
  font-size: 1.4em;
  font-weight: 100;
}

h4 {
  font-size: 1em;
  font-weight: 100;
  font-style: italic;
}

h5 {
  font-size: 0.8em;
  font-weight: 100;
  font-style: italic;
}

p {
  color: #555;
  font-weight: 100;
  &.small {
    text-transform: uppercase;
    font-size: .85em;
    color: #d8d8d8
  }
}

header {
  width: calc(100% - calc(2 * #{$body-border}));
  position: fixed;
  left: $body-border;
  z-index: 1;
  background-color: white;
  display: flex;
  justify-content: center;
  @media (max-width: $br-small) {
    left: 0;
    width: 100%;
  }
}



mark {
  background-color: rgba(0, 88, 255, 0.11);
  padding: 1px;
}

.header--wrapper {
  width: 770px;
  height: 75px;
  padding: 15px 50px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px #eaeaea solid;
  background-color: white;
  transition: all 0.5s ease;
  @media (max-width: $br-medium) {
    width: 70%;
    left: 50%;
    font-size: 1.3em;
  }
}

a {
  text-decoration: none;
  color: $black;
  box-shadow: inset 0 -9px 0 0 lighten($blue, 5%);
  transition: color 0.5s ease, box-shadow 0.3s ease;
  &:hover {
    box-shadow: inset 0 -12px 0 0 lighten($blue, 6%);
    color: lighten($black, 25%);
  }
}

.nav-link {
  box-shadow: none;
  text-transform: lowercase;
  &:hover {
    color: lighten($black, 25%);
    box-shadow: none;
  }
}

nav {
  >a:last-child {
    padding-right: 0;
  }
  ul {
    li {
      font-size: 0.9em;
      display: inline-block;
      &:last-child a {
        padding-right: 0;
      }
      a {
        @extend .nav-link;
        padding: 10px 31px;
      }
    }
  }
}

.mobile-nav {
  background-color: rgba(255, 255, 255, 0.90);
  z-index: 1000;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: all 0.5s ease;
  ul {
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    li:first-child {
      padding-top: 60px;
    }
  }
  &__wrapper {
    position: relative;
    width: 70%;
    margin: 89px auto;
    @media (max-width: $br-small) {
      margin: 91px auto;
    }
  }
  &__item {
    padding: 15px 0;
    list-style: none;
    a {
      display: block;
      position: relative;
      font-size: 1.3em;
      @media (max-height: 654px) {
        font-size: 1em;
      }
      @extend .nav-link;
    }
  }
}

.hamburger {
  @extend .nav-link;
  @media (min-width: $br-medium) {
    display: none;
  }
  &__close {
    @extend .nav-link;
    position: absolute;
    right: 0;
  }
}

.hero {
  height: calc(100vh);
  display: flex;
  align-items: center;
  justify-content: center;
  &--text {
    z-index: -1;
    width: 400px;
    text-align: center;
    img {
      width: 110px;
      height: 89px;
      margin-bottom: 30px;
    }
    h2 {
      margin: 30px 0 35px;
      font-size: 1.3em;
    }
  }
  .small {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    bottom: 6vh;
  }
  @media (max-width: $br-small) {
    width: 85%;
    margin: 0 auto;
  }
}

.main-container {
  padding: 110px 0;
  width: 100vw;
  box-shadow: 0 0 70px rgba(0, 0, 0, .04);
  margin-left: calc(-50vw + 50%);
}

.main-wrap {
  width: 700px;
  margin: 0 auto;
  @media (max-width: $br-small) {
    width: 85%;
  }
}

.dark-bg {
  background-color: darken(white, 1%);
  width: calc(100vw - calc(#{$body-border} * 2));
  position: relative;
  left: calc(50% + #{$body-border});
  right: 50%;
  margin-left: -50vw;
  margin-right: -50vw;
}

.persona--container {
  @media(min-width: $br-medium) {
    width: calc(100vw - calc(#{$body-border} * 2));
    position: relative;
    left: calc(50% + #{$body-border});
    right: 50%;
    margin: 50px -50vw;
    height: 500px;
    flex-direction: row;
  }
  margin: 50px 0;
  z-index: -1;
  flex-direction: column;
  display: flex;
  align-items: center;
  justify-content: center;
}

.sponsor--tier {
  a {
    box-shadow: none;
    img {
      height: 55px;
      padding: 0 20px;
      transition: all 0.3s ease;
      &:hover {
        transform: scale(1.03);
        opacity: 0.7;
      }
    }
  }
}

.sponsor--cta {
  margin: 40px 0;
  border-top: 1px solid #eaeaea;
  padding: 20px 0;
  p, .btn {
    font-size: .7em;
  }
  .twocol {
    justify-content: center;
    .twocol--body {
      width: initial;
      .btn {
        width: 61px;
      }
    }
  }
}

.persona {
  width: 280px;
  background-color: white;
  box-shadow: 0 4px 20px rgba(46, 61, 73, .05);
  border-radius: 5px;
  margin: 0 3%;
  @media(max-width: $br-medium) {
    margin: 20px 3%;
    width: 80%;
  }
  p {
    padding: 7px 20px;
    font-size: .9em;
  }
  &--person {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px 0 0;
    @media(max-width: $br-medium) {
      justify-content: flex-start;
      padding: 20px 20px 0;
    }
    img {
      width: 50px;
      height: 50px;
      border-radius: 25px;
      margin-right: 15px;
    }
    p {
      padding: 0;
      font-size: .7em;
      margin: 0;
      color: #c3c3c3;
    }
  }
  &--details {
    width: 150px;
  }
}

.card {
  width: 530px;
  height: 135px;
  margin: 30px 0;
  padding: 40px;
  box-shadow: 0 4px 20px rgba(46, 61, 73, .05);
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid rgba(185, 185, 185, 0.2);
  @media (max-width: $br-small) {
    width: 80%;
  }
  &--body {
    width: 350px;
    @media (max-width: $br-small) {
      width: initial;
    }
  }
  &--wrap {
    margin: 50px 0;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  &--faq {
    margin: 17px 0;
    padding: 40px;
    border-radius: 5px;
    box-shadow: 0 4px 20px rgba(46, 61, 73, .05);
    border: 1px solid rgba(185, 185, 185, 0.2);
    h4 {
      font-size: 1.1em;
    }
  }
}

#faq {
  margin: 80px 0 30px;
}

.faq--col {
  margin: 0 17px;
  width: 40%;
  display: flex;
  flex-direction: column;
}

.faq--container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 0px 0 0 -35%;
    width: 170%;
}


.justify-right {
  align-items: flex-end;
  text-align: right;
}

.twocol {
  display: flex;
  align-items: center;
  @media (max-width: $br-medium) {
    flex-direction: column;
  }
  &--expanded {
    @extend .twocol;
    margin: 90px 0 90px -9%;
    width: 118%;
  }
  div:first-child {
    margin-right: 120px;
    @media (max-width: $br-medium) {
      margin: 20px 0;
    }
  }
  &--body {
    width: 50%;
    font-size: 0.9em;
    p {
      margin-bottom: 0
    }
    @media (max-width: $br-medium) {
      width: initial;
    }
  }
  &--image {
    @extend .twocol--body;
    height: 250px;
    border-radius: 7px;
    overflow: hidden;
  }
}

.btn {
  display: block;
  font-weight: 100;
  width: 60px;
  margin: 0 auto;
  padding: 12px 30px;
  border-radius: 30px;
  border: 1px #efefef solid;
  cursor: pointer;
  @include prefix(user-select,
  none);
  box-shadow: 0 4px 10px rgba(0, 0, 0, .02);
  transition: transform 0.5s ease, box-shadow 1s ease;
  &:hover {
    transform: translateY(-2px);
    box-shadow: 0 6px 12px rgba(0, 0, 0, .04);
  }
  &:active {
    transform: translateY(1px);
    box-shadow: 0 0 12px rgba(0, 0, 0, .04);
  }
  &--cta {
    @extend .btn;
    color: darken($blue, 10%);
    border: 2px $blue solid;
  }
  &--disabled {
    @extend .btn;
    cursor: default;
    box-shadow: none;
    display: inline;
    text-transform: uppercase;
    color: darken($blue, 10%);
    border: 2px $blue solid;
  }
}

#circle {
  position: absolute;
  top: $body-border;
  left: 0;
  bottom: 0;
  right: 0;
  margin: auto;
  width: 850px;
  height: 850px;
  background-color: white;
  opacity: 1;
  border-radius: 325px;
  -webkit-transform: translate3d(0,0,0);
  filter: blur(100px);
  z-index: -2;
  @media(max-width: $br-medium) {
    border-radius: 0;
    width: 80%;
    height: 80%;
    filter: blur(90px);
  }
  @media(max-width: $br-small) {
    width: 100%;
  }
}

.arrow {
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
  bottom: 3vh;
}

#radar > .sketch {
  position: absolute;
  z-index: -3;
  top: $body-border;
  left: 0;
  opacity: 1;
}

#container > .sketch {
  position: absolute;
  z-index: -3;
  top: $body-border;
  left: 0;
  opacity: .1
}

.borderside {
  z-index: 1;
  border: $body-border lighten($blue, 7%) solid; //border-top: none;
  border-bottom: none;
  position: fixed;
  pointer-events: none;
  width: calc(100vw - calc(#{$body-border} * 2));
  height: 100vh;
  top: 0;
  left: 0;
  @media (max-width: $br-small) {
    display:none;
  }
}

.fade-in {
  opacity: 0;
  transform: translateY(3px);
}

::selection {
  background: $blue;
}

::-moz-selection {
  background: $blue;
}

@media (max-width: $br-medium) {
  .hide-mobile {
    display: none;
  }
}

.hidden {
  visibility: hidden;
  opacity: 0;
}

.center {
  text-align: center;
  margin: 0 auto;
}

